--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
@@ -12,8 +12,7 @@
                 <p:outputText value="#{webutil.webprofile.supportInfo}"
                               rendered="#{webutil.webprofile.hasBusinessContact}"/>
             <ui:fragment rendered="#{webutil.hasAccess('USER')}">
-                <a class="Animated05 CursPointer" href="https://get.teamviewer.com/s11158247">
-                    <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
+                <a class="Animated05 CursPointer" href="https://get.teamviewer.com/s11158247"> | <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
                 </a>
             </ui:fragment>
             </span>
