--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -66,7 +66,17 @@
             </ui:fragment>
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
             <!--#{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.-->
-            <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>
+           <!-- <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>-->
+            <!--Start of Zendesk Chat Script-->
+            <script type="text/javascript">
+                window.$zopim||(function(d,s){var z=$zopim=function(c){
+                    z._.push(c)},$=z.s=
+                        d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+                        _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+                    $.src='https://v2.zopim.com/?4mOGZFvGsPWidkCQYPAIoDjKEwCyk7kN';z.t=+new Date;$.
+                            type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+            </script>
+            <!--End of Zendesk Chat Script-->
         </div>
     </div>
 
