--- a/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
@@ -4252,3 +4252,11 @@ padding: 10px 0px;
 .fineTuneBtn .ui-button-text {
 	padding: 6px 0px !important;
 }
+
+.titleColorActive {
+	color: #A4332F!important;
+}
+
+.pDisplayShow {
+	display:block!important;
+}
