--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -126,7 +126,7 @@
                 </li>
             </ui:fragment>
 
-            <ui:fragment rendered="#{webutil.hasRole('USER')}">
+            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
                 <li id="modelMenuHighlight">
                     <a href="/pages/advisor/assetworkflow.xhtml" id="menutradebtn">Model</a>
                 </li>
