--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_4/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_4/css/tcm.css
@@ -618,7 +618,7 @@ img.riskImage:hover {
     .AddressFieldOnly {
         width: 97%!important;
     }
-    
+
     .AddressFieldOnlyB {
         width: 91%!important;
     }
@@ -1184,7 +1184,7 @@ img.riskImage:hover {
 
 @media (max-width:640px) {
     .ListOfAccntsColWidth {
-    font-size:13px!important;
+        font-size:13px!important;
     }
 }
 
@@ -1194,7 +1194,7 @@ img.riskImage:hover {
 
 /*dropdown*/
 .customMenuButtonDashboard > button > span:nth-child(1) {
-	/*     background-color: black!important; */
+    /*     background-color: black!important; */
     border-radius: 16px!important;
     background-size: 12px!important;
     background-image: url("/javax.faces.resource/images/down.png.xhtml?ln=tcm")!important;
@@ -1213,44 +1213,44 @@ img.riskImage:hover {
 }
 
 @media (min-width: 745px) {
-.dsahboardEditDropdownBlock {
-    float: right;
-    margin-right:5px;
-}
+    .dsahboardEditDropdownBlock {
+        float: right;
+        margin-right:5px;
+    }
 }
 
 @media (max-width: 744px) and (min-width: 736px) {
-.editDropdownSelect > .ui-selectonemenu-trigger {
-	    height: 30px!important;
-}
+    .editDropdownSelect > .ui-selectonemenu-trigger {
+        height: 30px!important;
+    }
 }
 
 @media (max-width: 735px) {
-.editDropdownSelect > .ui-selectonemenu-trigger {
-	    height: 27px!important;
-}
+    .editDropdownSelect > .ui-selectonemenu-trigger {
+        height: 27px!important;
+    }
 }
 
 @media (max-width: 744px) {
-	.dsahboardEditDropdownBlock {
+    .dsahboardEditDropdownBlock {
         display: block;
-	position: absolute;
-    right: 0;
-    margin-top: -85px;
-    width: 225px;
-	}
+        position: absolute;
+        right: 0;
+        margin-top: -85px;
+        width: 225px;
+    }
 
-.editDropdownSelect > .ui-selectonemenu-trigger > span	{
-    margin-top: 5px!important;
-}
+    .editDropdownSelect > .ui-selectonemenu-trigger > span	{
+        margin-top: 5px!important;
+    }
 
 
 }
 
 @media (max-width: 370px) {
-	.dsahboardEditDropdownBlock {
-    width: 200px;
-	}
+    .dsahboardEditDropdownBlock {
+        width: 200px;
+    }
 }
 
 .dropdownDashboardTable {
@@ -1260,7 +1260,7 @@ img.riskImage:hover {
 }
 
 .editDropdownSelect > label {
-	font-size: 13px!important;
+    font-size: 13px!important;
 }
 
 .editDropdownSelect {
@@ -1269,7 +1269,7 @@ img.riskImage:hover {
 }
 
 .editDropdownSelect > .ui-selectonemenu-trigger {
-	border-radius: 0px!important;
+    border-radius: 0px!important;
     background: #ced2d4!important;
     border: 1px solid #c3ccd5!important;
     height: 31px;
@@ -1285,7 +1285,7 @@ img.riskImage:hover {
     width: 50%!important;
     }
      */
-/* dec21*/
+    /* dec21*/
 
     .NewDashTable2 > tbody > tr {
         display: inline-block;
@@ -1296,9 +1296,9 @@ img.riskImage:hover {
     }
 
     .NewDashTable2 > tbody > tr:nth-child(1) {
-    width: 30%!important;
-    float: left;
-}
+        width: 30%!important;
+        float: left;
+    }
 
     .NewDashTable2 > tbody > tr:nth-child(3) {
         display: table!important;
@@ -1306,7 +1306,7 @@ img.riskImage:hover {
         float: right;
     }
 
-/**/
+    /**/
     .InfoNewDash {
         float: none;
     }
@@ -1397,7 +1397,7 @@ img.riskImage:hover {
 }
 
 .ContentForTitleDash {
-	text-transform: capitalize;
+    text-transform: capitalize;
     font-weight: bold;
     width: 100%;
     display: inline-block;
@@ -1469,7 +1469,7 @@ img.riskImage:hover {
     color: #778D9B!important;
     border: solid 2px #009abb;
     border-radius: 40px!important;
-        font-size: 13px;
+    font-size: 13px;
 }
 
 .InfoNewDash {
@@ -1571,25 +1571,25 @@ img.riskImage:hover {
 }
 
 .labelTitleCustom {
-text-align: Center !important;
+    text-align: Center !important;
     font-weight: bold !important;
     border-bottom: 2px solid #778d9b;
 }
 
 @media (max-width: 850px) {
-	.editTabsDisabled label {
-	font-size:12px!important;
-	}
+    .editTabsDisabled label {
+        font-size:12px!important;
+    }
 
-	.partialAmtTextbox {
-	font-size:12px!important;
-	}
+    .partialAmtTextbox {
+        font-size:12px!important;
+    }
 }
 
 @media (min-width: 850px){
-.partialAmtTextbox {
-	font-size: 14px!important;
-}
+    .partialAmtTextbox {
+        font-size: 14px!important;
+    }
 }
 
 #layout-topbar-menu li:hover > form > a {
@@ -1603,23 +1603,23 @@ text-align: Center !important;
 }
 
 @media (max-width: 815px){
-.EmptyResponsive {
-display: none;
-}
+    .EmptyResponsive {
+        display: none;
+    }
 }
 
 @media (max-width: 450px) {
-.Responsive100 {
-	width: 100%;
-}
+    .Responsive100 {
+        width: 100%;
+    }
 }
 
 .internalTabs {
-	    padding: 0!important;
+    padding: 0!important;
 }
 
 .internalTabs > .ui-accordion-content {
-	border-bottom: 1px solid #808080!important;
+    border-bottom: 1px solid #808080!important;
 }
 
 .internalTabs > .ui-accordion-header > span:nth-child(1) {
@@ -1647,12 +1647,12 @@ display: none;
 }
 
 .editTabsDisabled > .ui-accordion-header {
-	    pointer-events: none!important;
-	        border-radius: 0!important;
+    pointer-events: none!important;
+    border-radius: 0!important;
 }
 
 .editTabsDisabled > .ui-accordion-header > span:nth-child(1) {
-	display: none!important;
+    display: none!important;
 }
 
 .ui-panel-content {
@@ -2582,7 +2582,7 @@ h3 {
         padding: 0 10px !important;
     }
 
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 222px;
     }
@@ -2619,7 +2619,7 @@ h3 {
         padding: 0 11px !important;
     }
 
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 258px;
     }
@@ -2656,7 +2656,7 @@ h3 {
         padding: 0 12px;
     }
 
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 270px;
     }
@@ -2689,7 +2689,7 @@ h3 {
         background-color: transparent!important;
     }
 
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 366px;
     }
@@ -2709,7 +2709,7 @@ h3 {
 
 
 @media (max-width: 729px) and (min-width: 641px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 426px;
     }
@@ -2737,7 +2737,7 @@ h3 {
 }
 
 @media (max-width: 770px) and (min-width: 730px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 516px;
     }
@@ -2753,7 +2753,7 @@ h3 {
 }
 
 @media (max-width: 960px) and (min-width: 771px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 546px;
     }
@@ -2768,7 +2768,7 @@ h3 {
 }
 
 @media (max-width: 999px) and (min-width: 961px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 666px;
     }
@@ -2785,20 +2785,262 @@ h3 {
 }
 
 @media (max-width: 1320px) and (min-width: 1000px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 636px;
     }
 }
 
 @media (min-width: 1321px) {
-    .tab_main > div {
+    .tab_main > .guestTabs {
         margin: 0 auto;
         width: 846px;
     }
 }
 
 /**/
+
+/*Steps-tab-center-alligned*/
+@media (max-width: 361px) and (min-width: 320px) {
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(2) {
+        visibility: hidden;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(1) {
+        visibility: visible!important;
+        position: static!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-disabled {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-highlight {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
+        padding: 0 10px !important;
+    }
+
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 189px;
+    }
+
+    .tab_main {
+        padding: 35px 0px 0px 0px !important;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+        background: #F6FAFC;
+        width: 20px;
+    }
+}
+
+@media (max-width: 481px) and (min-width: 361px) {
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(2) {
+        visibility: hidden;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(1) {
+        visibility: visible!important;
+        position: static!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-disabled {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-highlight {
+        background-color: transparent!important;
+    }
+    .portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
+        padding: 0 11px !important;
+    }
+
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 217px;
+    }
+
+    .tab_main {
+        padding: 35px 0px 0px 0px !important;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+        background: #F6FAFC;
+        width: 22px;
+    }
+}
+
+@media (max-width: 560px) and (min-width: 481px) {
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(2) {
+        visibility: hidden;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(1) {
+        visibility: visible!important;
+        position: static!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-disabled {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-highlight {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel .portfolioCreationStepsPanel > ul > .ui-steps-item {
+        padding: 0 12px;
+    }
+
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 227px;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+        width: 24px;
+    }
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+}
+
+@media (max-width: 640px) and (min-width: 561px) {
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(2) {
+        visibility: hidden;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(1) {
+        visibility: visible!important;
+        position: static!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-disabled {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-highlight {
+        background-color: transparent!important;
+    }
+
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 305px;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+        width: 40px;
+    }
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
+        visibility: hidden;
+    }
+}
+
+
+@media (max-width: 729px) and (min-width: 641px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 355px;
+    }
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(2) {
+        visibility: hidden;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span:nth-child(1) {
+        visibility: visible!important;
+        position: static!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-disabled {
+        background-color: transparent!important;
+    }
+
+    .portfolioCreationStepsPanel > ul > .ui-state-highlight {
+        background-color: transparent!important;
+    }
+}
+
+@media (max-width: 770px) and (min-width: 730px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 430px;
+    }
+
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
+        font-size: 12px !important;
+    }
+}
+
+@media (max-width: 960px) and (min-width: 771px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 455px;
+    }
+
+    .portfolioCreationStepsPanel > ul > li > a.ui-menuitem-link.ui-corner-all {
+        width: 70px;
+    }
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+}
+
+@media (max-width: 999px) and (min-width: 961px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 555px;
+    }
+
+    .tab_main {
+        padding: 20px 0px 0px 0px !important;
+    }
+}
+
+@media (min-width: 1301px) and (max-width: 1320px){
+    .portfolioCreationStepsPanel > ul > li > a > span.ui-steps-title {
+        margin-left: -6px!important;
+    }
+}
+
+@media (max-width: 1320px) and (min-width: 1000px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 530px;
+    }
+}
+
+@media (min-width: 1321px) {
+    .tab_main > .loginTabs {
+        margin: 0 auto;
+        width: 705px;
+    }
+}
+
+/***/
+
 /**/
 
 /*Steps-tab-center-alligned (Fund Account)*/
@@ -3887,31 +4129,31 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 }
 
 .ResMArTop {
-margin-top: 20px;
+    margin-top: 20px;
 }
 
 @media (min-width: 1200px) {
-	.summaryPageBtn {
-	margin-top: 10px!important;
-}
+    .summaryPageBtn {
+        margin-top: 10px!important;
+    }
 }
 
 @media (max-width: 1200px) {
-.ResEmptyBox30 {
-	height: 20px!important;
-}
+    .ResEmptyBox30 {
+        height: 20px!important;
+    }
 
-.ResMArTop {
-margin-top: 10px;
-}
-.summaryPageBtn {
-	position: relative;
-	bottom: 530px;
-}
+    .ResMArTop {
+        margin-top: 10px;
+    }
+    .summaryPageBtn {
+        position: relative;
+        bottom: 530px;
+    }
 
-.performanceChartBlock {
-	margin-top: 85px;
-}
+    .performanceChartBlock {
+        margin-top: 85px;
+    }
 }
 
 @media (max-width: 860px) and (min-width: 816px) {
@@ -3922,45 +4164,45 @@ margin-top: 10px;
 
 
 @media (max-width: 1200px) and (min-width: 1050px) {
-	.fineTuneBlock {
-	width: 84%!important;
-	height: 402px!important;
-}
+    .fineTuneBlock {
+        width: 84%!important;
+        height: 402px!important;
+    }
 }
 
 @media (max-width: 1050px) and (min-width: 961px) {
-	.fineTuneBlock {
-	width: 83%!important;
-	height: 405px!important;
-	}
+    .fineTuneBlock {
+        width: 83%!important;
+        height: 405px!important;
+    }
 }
 
 @media (max-width: 375px) and (min-width: 320px) {
-	.fineTuneBlock {
-	/*width: 78%!important;
-	height: 325px!important;*/
-}
+    .fineTuneBlock {
+        /*width: 78%!important;
+        height: 325px!important;*/
+    }
 
-.closeFTbtn {
-    right: 14px!important;
-}
+    .closeFTbtn {
+        right: 14px!important;
+    }
 }
 
 @media (max-width: 425px) and (min-width: 375px) {
-	.fineTuneBlock {
-	/*width: 81%!important;
-	height: 325px!important;*/
-}
+    .fineTuneBlock {
+        /*width: 81%!important;
+        height: 325px!important;*/
+    }
 
-.closeFTbtn {
-    right: 5px!important;
-}
+    .closeFTbtn {
+        right: 5px!important;
+    }
 }
 
 @media (max-width: 768px) and (min-width: 751px) {
-	.fineTuneBlock {
-	width: 80%!important;
-}
+    .fineTuneBlock {
+        width: 80%!important;
+    }
 }
 
 /*@media (max-width: 768px) and (min-width: 750px) {
@@ -3990,21 +4232,21 @@ margin-top: 10px;
 
 @media (max-width: 915px) and (min-width: 750px) {
 
-.summaryPageBtn {
-	bottom: 510px!important;
-}
+    .summaryPageBtn {
+        bottom: 510px!important;
+    }
 }
 
 @media (max-width: 960px) and (min-width: 916px) {
-	.fineTuneBlock {
-	height: 382px!important;
-}
+    .fineTuneBlock {
+        height: 382px!important;
+    }
 }
 
 @media (max-width: 960px) and (min-width: 750px) {
-	.fineTuneBlock {
-	width: 84%!important;
-}
+    .fineTuneBlock {
+        width: 84%!important;
+    }
 
     .summaryLBlock {
         padding: 0px 5px!important;
@@ -4014,12 +4256,12 @@ margin-top: 10px;
 
 
 @media (max-width: 750px) {
-	.spResPieBlock, .spResPieTableBlock {
-	width: 100%;
-	}
-	
-	.fineTuneBlock {
-	/*height: 340px!important;*/
+    .spResPieBlock, .spResPieTableBlock {
+        width: 100%;
+    }
+
+    .fineTuneBlock {
+        /*height: 340px!important;*/
         position: fixed!important;
         top: 5px;
         bottom: 5px;
@@ -4027,40 +4269,40 @@ margin-top: 10px;
         right: 5px;
         width: auto!important;
         height: auto!important;
-}
+    }
 }
 
 @media (max-width:750px) and (min-width:600px) {
-	.summaryPageBtn {
-	bottom: 507px;
-	}
+    .summaryPageBtn {
+        bottom: 507px;
+    }
 }
 
 @media (max-width:600px) and (min-width:480px)  {
-	.summaryPageBtn {
-	bottom: 576px;
-	}
+    .summaryPageBtn {
+        bottom: 576px;
+    }
 }
 
 @media (max-width:480px) {
-	.summaryPageBtn {
-	bottom: 650px;
-	}
-	
-	.performanceChartBlock {
-    margin-top: 125px;
-}
+    .summaryPageBtn {
+        bottom: 650px;
+    }
 
-.spWid100 {
-	width: 100%!important;
-}
+    .performanceChartBlock {
+        margin-top: 125px;
+    }
+
+    .spWid100 {
+        width: 100%!important;
+    }
 }
 
 
 
 
 .fineTuneBlock {
-width: 41%;
+    width: 41%;
     height: 460px;
     position: absolute;
     background:#fbfbfb;
@@ -4075,30 +4317,30 @@ width: 41%;
 }
 
 .FTLabel > span {
-font-weight: bold;	
+    font-weight: bold;
 }
 
 .fineTuneDetail {
-	margin-top: 55px;
+    margin-top: 55px;
     padding: 0 20px;
 }
 
 .closeFTbtn {
-	position: absolute;
+    position: absolute;
     top: 10px;
     right: 0px;
 }
 
 .uobSliderLabel {
-	position: relative;
+    position: relative;
 }
 
 .uobSliderLabel.firstLabel {
-	right: 5px;
+    right: 5px;
 }
 
 .uobSliderLabel.lastLabel {
-	left: 5px;
+    left: 5px;
 }
 
 .csWarningPanel {
@@ -4155,7 +4397,7 @@ font-weight: bold;
 
 
 .summaryLBlock {
-box-sizing: border-box;
+    box-sizing: border-box;
     padding: 0px 10px;
 }
 
