--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -21,6 +21,27 @@
     <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
         <ui:include src="/template/common/spark/layoutmenu.xhtml"/>
     </ui:fragment>
+    <!--<h:form>-->
+
+
+        <p:growl id="msg" showDetail="true" sticky="true"/>
+
+        <!-- If idle 10 seconds, run 'idleDialog' -->
+        <p:idleMonitor timeout="5000" onidle="idleDialog123()"  />
+
+        <p:confirmDialog id="confirmDialog"
+                         message="You have been idle for at least 10 seconds,
+                            Please click ok to continue."
+                         header="Are you there?" severity="alert" widgetVar="idleDialog">
+
+          <p:commandButton id="confirm" value="Ok" update="msg"
+                             oncomplete="idleDialog.hide()"
+                             actionListener="#{sessionControl.onIdleSessionLogout}"/>
+
+
+        </p:confirmDialog>
+
+    <!--</h:form>-->
 
     <div id="layout-portlets-cover">
         <ui:insert name="content">
@@ -50,5 +71,13 @@
     <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
     <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
     <h:outputStylesheet name="css/invessence.css" library="invessence"/>
+    <script type="text/javascript">
 
+        function idleDialog123()
+        {
+          console.log("H1");
+            $('#confirmDialog').show();
+            console.log("B1");
+        }
+    </script>
 </ui:composition>
