--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1569,3 +1569,24 @@ text-align: center;
 #TvChatWidget {
 	z-index: 169999999!important;
 }
+
+.confirmDialogueBlock {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	z-index: 200;
+	background: rgba(0, 0, 0, 0.25);
+}
+
+.innercdb {
+	width: 400px!important;
+	margin: 0 auto;
+	padding: 20% 0%;
+}
+
+.confirmDialogueBlock .ui-icon-closethick {
+display: none;
+pointer-events: none;
+}
