--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
@@ -3509,7 +3509,7 @@ a {
 	border-right: 1px solid #666666;
 }
 
-.nextButtonLP {
+.nextButtonLP, .RPHeadings1 {
 	color: #A4332F;
 }
 
@@ -4220,3 +4220,221 @@ padding: 10px 0px;
 .submenuContent1 {
 	display: none;
 }
+
+
+
+/***v3 dashboard*****/
+.userPanelBlock {
+	box-sizing: border-box;
+}
+
+.detailsPanelBlock {
+	box-sizing: border-box;
+}
+
+.assetOvrPanel, .acctdtlsPanel, .notificationBlk {
+	height: 300px;
+	box-sizing: border-box;
+	padding: 10px 10px;
+}
+
+.acctdtlsPanel, .notificationBlk {
+	float: left;
+}
+
+.acctCombinedBlk {
+	height: 300px;
+	box-sizing: border-box;
+}
+
+.userPanelv3d {
+	height: 500px;
+}
+
+.detailsPanelv3d {
+	border-left: 2px solid #666666;
+}
+
+.userNameBlockv3d {
+	height: 100px;
+	padding: 10px 10px;
+	box-sizing: border-box;
+}
+
+.userNamePanel {
+	height: 100%;
+	box-shadow: 1px 1px 3px #dcd9d9;
+}
+
+.addDtlv3d, .userNameLabelv3d {
+	height: 45%;
+}
+
+.seperaterusv3d {
+	background: #ecebeb;
+	height: 5%;
+	box-sizing: border-box;
+	margin: 0 auto;
+}
+
+.userNameLabelv3d {
+	text-align: center;
+	padding: 10px 20px;
+	box-sizing: border-box;
+	font-weight: bold;
+}
+
+.addDtlv3d {
+	padding: 10px 20px;
+	box-sizing: border-box;
+}
+
+.addDtlv3d span {
+	font-size: 13px;
+	letter-spacing: 1px;
+	color: #666666;
+}
+
+.addDtlv3d span:nth-child(1) {
+	float: left;
+}
+
+.addDtlv3d span:nth-child(2) {
+	float: right;
+}
+
+.acctinfoPanel, .assetinfoPanel, .innerNotificationBlk {
+	height: 100%;
+	box-shadow: 1px 1px 3px #dcd9d9;
+}
+
+.notifinfoPanel {
+	height: 80%;
+}
+
+.notifinfoPanelTitleBlk {
+	height: 15%;
+}
+
+.v3dMainTitle {
+	padding: 10px 10px;
+	box-sizing: border-box;
+	border-bottom: 4px solid #ecebeb;
+	font-weight: bold;
+}
+
+.addBtnsv3d {
+	height: 90%;
+	box-sizing: border-box;
+	padding: 4px 10px;
+}
+
+.cellBlock {
+	float: left;
+	font-size: 13px;
+	padding: 8px 0px;
+	margin-top: 5px;
+	border-bottom: 1px solid #f5f5f5;
+}
+
+.v3dinfoBtnBlk {
+	border-radius: 0px;
+}
+
+.v3dinfoBtnBlk .ui-button-text, .v3dinfoBtnBlk.ui-state-hover .ui-button-text,
+.v3dinfoBtnBlk.ui-state-focus .ui-button-text {
+	border-radius: 0px !important;
+	background: #666666 !important;
+}
+
+.v3dbtnBlk {
+	height: 16%;
+	padding: 4px 0px;
+}
+
+.boxBtnv3d {
+	width: 32px;
+	height: 32px;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	border: 2px solid #666666;
+	border-radius: 5px;
+}
+
+.firstBtnBlck>.boxBtnv3d {
+	position: relative;
+	left: 5px;
+}
+
+.btnLabev3d {
+	height: 100%;
+	padding: 11px 5px;
+	box-sizing: border-box;
+}
+
+.nblock {
+	width: 50%;
+	height: 50%;
+	padding: 5px 5px;
+	box-sizing: border-box;
+}
+
+.contentnotiBlk {
+	box-sizing: border-box;
+	padding: 5px 5px;
+	height: 100%;
+	border: 1px solid rgba(102, 102, 102, 0.19);
+}
+
+.nIconContent {
+	height: 80%;
+	text-align: center;
+	box-sizing: border-box;
+	padding: 10px 0;
+}
+
+.nIconContent i {
+	font-size: 50px;
+}
+
+.nLabelContent {
+	height: 20%;
+	text-align: center;
+	padding: 7px 0px;
+	box-sizing: border-box;
+	font-size: 13px;
+	letter-spacing: 1px;
+}
+
+.advLabelBlockv3d {
+	padding: 10px 10px;
+	box-sizing: border-box;
+}
+
+
+@media (max-width : 1000px) {
+	.notificationBlk {
+		display: none;
+	}
+	.acctdtlsPanel {
+		width: 100%;
+	}
+}
+
+@media (max-width: 680px) {
+	.detailsPanelBlock {
+		display: none;
+	}
+
+	.userPanelBlock {
+		width: 100%;
+	}
+}
+
+@media (min-width: 681px) {
+	.MoileModeAcctOvw {
+		display: none;
+	}
+}
+
