--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
@@ -11,7 +11,7 @@
             <span class="bussinessContact Fright">
                 <p:outputText value="#{webutil.webprofile.supportInfo}"
                               rendered="#{webutil.webprofile.hasBusinessContact}"/>
-            <ui:fragment rendered="#{webutil.hasAccess('USER')}">
+            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
                 <a class="Animated05 CursPointer" href="https://get.teamviewer.com/s11158247"> | <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
                 </a>
             </ui:fragment>
