--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -16,7 +16,7 @@
             <p:menuitem value="New Account" rendered="#{webutil.hasAccess('USER')}"
                         actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
 
-            <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.hasRole('DEMO')}"
+            <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.isAggregatorMenuActive()}"
                     actionListener="#{aggrBean.startup('D')}" />
 
         </ps:menu>
