--- a/Invessence/modules/web/src/main/webapp/template/common/template.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/template.xhtml
@@ -13,7 +13,7 @@
     <f:facet name="first">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE" />
+        <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta name="apple-mobile-web-app-capable" content="yes"/>
     </f:facet>
@@ -21,7 +21,8 @@
     <h:outputScript name="js/ripple-effect.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/perfect-scrollbar.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/layout.js" library="#{uiLayout.themeLib}"/>
-    <link rel="shortcut icon" type="image/x-icon" href="#{uiLayout.webProfile.feviconLogoPath}" />
+    <h:outputScript name="js/sessionManagement.js" library="invessence"/>
+    <link rel="shortcut icon" type="image/x-icon" href="#{uiLayout.webProfile.feviconLogoPath}"/>
 
     <ui:insert name="head"/>
 
@@ -31,12 +32,42 @@
     <ui:include src="#{uiLayout.templateDIR}/layout.xhtml"/>
 
     <ui:fragment rendered="#{uiLayout.webProfile.hasCustomcss}">
-        <h:outputStylesheet name="#{uiLayout.webProfile.customcss}" library="#{uiLayout.webProfile.cssdir}"      />
+        <h:outputStylesheet name="#{uiLayout.webProfile.customcss}" library="#{uiLayout.webProfile.cssdir}"/>
     </ui:fragment>
     <ui:fragment rendered="#{uiLayout.webProfile.hasGoogleAnalytic}">
         <h:outputScript name="#{uiLayout.webProfile.googleAnalytic}"
-                            library="#{uiLayout.webProfile.cssdir}"/>
+                        library="#{uiLayout.webProfile.cssdir}"/>
     </ui:fragment>
+    <p:inputText type="hidden" id="idIsUserLoggedIn"
+                 value="#{webutil.isUserLoggedIn()}"/>
+    <p:inputText type="hidden" id="idHomeURL"
+                 value="#{webutil.webprofile.getHomepage()}"/>
+    <p:inputText type="hidden" id="idSessionTimeout"
+                 value="#{sessionControl.getCustomSessionTimeout()}"/>
+    <p:inputText type="hidden" id="idCountdownTime"
+                 value="#{sessionControl.getSessionCountdownTime()}"/>
+    <p:growl id="msg" showDetail="true" sticky="true"/>
+
+    <p:idleMonitor timeout="#{sessionControl.getCustomSessionTimeout()}" onidle="idleDialog();"/>
+
+    <div id="idConfirmExt">
+        <div class="innercdb">
+            <div id="progressBar"></div>
+            <p:confirmDialog id="confirmDialog"
+                             message="You have been idle for long time."
+                             header="Are you there?" severity="alert" widgetVar="c">
+                <p:commandButton id="idLogout" value="Logout" update="msg"
+                                 actionListener="#{sessionControl.onIdleSessionLogout}"/>
+                <p:commandButton id="idContinue" value="I Am Still Here" update="msg"
+                                 oncomplete="fnDisableDialog()"
+                                 actionListener="#{sessionControl.onActive}"/>
+                <p:commandButton id="idOk" value="Ok" update="msg"
+                                 onclick="fnDisableVisitorDialog()"/>
+
+
+            </p:confirmDialog>
+        </div>
+    </div>
 
 </h:body>
 
